Integrate Flickity for image carousel
Added Flickity carousel library for enhanced image sliding functionality.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>ProGear Hub</title>
     <link rel="icon" href="images/Logo.png">
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -27,7 +29,11 @@
             </nav>
         </div>
     </header>
-
+<!-- carousel -->
+    <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'>
+        <div class="slide">1</div>div>
+        <div class="slide">2</div>div>
+        <div class="slide">3</div>div>
     <section class="hero">
         <div class="hero-images">
             <div class="hero-img large"><img src="images/Home.jpg" alt=""></div>
