--- a/index.html
+++ b/index.html
@@ -1,78 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>ProGear Hub</title>
-    <link rel="icon" href="images/Logo.png">
-    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ProGear Hub</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 </head>
-
 <body>
-    <header class="main-header">
-        <div class="header-top">
-            <img class="logo" src="images/Logo.png"  width= "120px" alt="Progear Hub Logo">
-           
-            <nav class="nav-links">
-                <a href="#">Home</a>
-                <a href="#">Shop</a>
-                <a href="#">Categories</a>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-                <div class="search-box">
-                    <input type="text" placeholder="Search">
-                    <button>Search</button>
-                </div>
-            </nav>
-        </div>
-    </header>
-<!-- carousel -->
-    <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'>
-        <div class="slide">1</div>div>
-        <div class="slide">2</div>div>
-        <div class="slide">3</div>div>
-    <section class="hero">
-        <div class="hero-images">
-            <div class="hero-img large"><img src="images/Home.jpg" alt=""></div>
-        
-            <button class="shop-now">Shop Now</button>
-        </div>
-    </section>
 
-    <section class="featured">
-        <h2>Featured Products</h2>
-        <div class="product-grid">
-            <div class="product">
-                <img src="images/bola.jpg" alt="Product 1">
-                <button>Equipments</button>
-            </div>
-            <div class="product">
-                <img src="images/short.jpg" alt="Product 2">
-                <button>Clothes</button>
-            </div>
-            <div class="product">
-                <img src="images/Brand.jpg" alt="Product 3">
-                <button>Brands</button>
-            </div>
-            <div class="product">
-                <img src="images/NSP-0036-118_zoom3.webp" alt="Product 4">
-                <button>Sales</button>
-            </div>
-        </div>
-    </section>
+  <!-- HEADER -->
+  <header class="main-header">
+    <div class="header-container">
+      <img class="logo" src="images/Logo.png" width="120" alt="ProGear Hub Logo">
 
-    <section class="testimonials">
-        <h2>What Our Customers Say</h2>
-    </section>
+      <div class="nav-search">
+        <nav class="nav-links">
+          <a href="#">Home</a>
+          <a href="#">Shop</a>
+          <a href="#">Categories</a>
+          <a href="#">About</a>
+          <a href="#">Contact Us</a>
+        </nav>
 
-    <footer>
-        <div class="footer-content">
-            <p>ProGear Hub</p>
-            <a href="#">Privacy Policy</a>
+        <div class="search-box">
+          <input type="text" placeholder="Search...">
+          <button>Search</button>
         </div>
-    </footer>
+      </div>
+    </div>
+  </header>
+
+  <!-- FRASE ABAIXO DO HEADER -->
+  <div class="hero-message">
+    Unleash your potential. Every move starts with the right gear.
+  </div>
+
+  <!-- HERO / CAROUSEL -->
+  <section class="hero">
+    <div class="carousel"
+         data-flickity='{ "wrapAround": true, "autoPlay": 2500, "pauseAutoPlayOnHover": true, "prevNextButtons": true, "pageDots": true }'>
+      <div class="carousel-cell"><img src="images/Home.jpg" alt="Banner 1"></div>
+      <div class="carousel-cell"><img src="images/carousel1.jpg" alt="Banner 2"></div>
+      <div class="carousel-cell"><img src="images/carousel2.jpg" alt="Banner 3"></div>
+    </div>
+    <button class="shop-now">Shop Now</button>
+  </section>
+
+  <!-- FEATURED PRODUCTS -->
+  <section class="featured">
+    <h2>Featured Products</h2>
+    <div class="product-grid">
+      <div class="product">
+        <img src="images/bola.jpg" alt="Product 1">
+        <button class="product-btn">Equipments</button>
+      </div>
+      <div class="product">
+        <img src="images/short.jpg" alt="Product 2">
+        <button class="product-btn">Clothes</button>
+      </div>
+      <div class="product">
+        <img src="images/Brand.jpg" alt="Product 3">
+        <button class="product-btn">Accessories</button>
+      </div>
+      <div class="product">
+        <img src="images/NSP-0036-118_zoom3.png" alt="Product 4">
+        <button class="product-btn">Sales</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- TESTIMONIALS -->
+  <section class="testimonials">
+    <h2>What Our Customers Say</h2>
+    <div class="carousel testimonials-carousel"
+         data-flickity='{ "wrapAround": true, "autoPlay": 3500, "pauseAutoPlayOnHover": true, "prevNextButtons": true, "pageDots": true }'>
+      <div class="carousel-cell testimonial">
+        <p>"I love the quality of the products! Fast delivery and amazing customer service."</p>
+        <h4>- Alex Johnson</h4>
+      </div>
+      <div class="carousel-cell testimonial">
+        <p>"Great selection and excellent prices. The website is easy to use and everything arrived on time!"</p>
+        <h4>- Maria Lopez</h4>
+      </div>
+      <div class="carousel-cell testimonial">
+        <p>"Excellent experience! The gear I bought has lasted for months and still looks brand new."</p>
+        <h4>- Daniel Smith</h4>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    © 2025 ProGear Hub. All rights reserved.
+  </footer>
+
+  <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 </body>
 </html>
