--- a/kids.html
+++ b/kids.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ProGear Hub</title>
+  <title>Men | ProGear Hub</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 </head>
@@ -49,25 +49,33 @@
     <button class="shop-now">Shop Now</button>
   </section>
 
-  <!-- WOMEN PRODUCTS -->
+  <!-- MEN PRODUCTS -->
   <section class="featured">
-    <h2>Featured Products</h2>
+    <h2>Kids Products</h2>
     <div class="product-grid">
       <div class="product">
-        <img src="images/bola.jpg" alt="Product 1">
-        <button class="product-btn">Equipments</button>
+        <img src="images/K clothes.jpg" alt="Kid's T-Shirt">
+        <p>Clothingt</p>
+        <p class="price">From $49</p>
+        <button class="product-btn">Add to Cart</button>
       </div>
       <div class="product">
-        <img src="images/short.jpg" alt="Product 2">
-        <button class="product-btn">Clothes</button>
+        <img src="images/K foot.jpg" alt="Kid's Sneakers">
+        <p>Footwear</p>
+        <p class="price">From $99</p>
+        <button class="product-btn">Add to Cart</button>
       </div>
       <div class="product">
-        <img src="images/Brand.jpg" alt="Product 3">
-        <button class="product-btn">Accessories</button>
+        <img src="images/K bag.jpg" alt="Kid's Accessories">
+        <p>Accessories</p>
+        <p class="price">From $199</p>
+        <button class="product-btn">Add to Cart</button>
       </div>
       <div class="product">
-        <img src="images/NSP-0036-118_zoom3.png" alt="Product 4">
-        <button class="product-btn">Sales</button>
+        <img src="images/K equipm.jpg" alt="Kid's Play Equipments">
+        <p>Play Equipments</p>
+        <p class="price">From $259</p>
+        <button class="product-btn">Add to Cart</button>
       </div>
     </div>
   </section>
@@ -78,16 +86,16 @@
     <div class="carousel testimonials-carousel"
          data-flickity='{ "wrapAround": true, "autoPlay": 3500, "pauseAutoPlayOnHover": true, "prevNextButtons": true, "pageDots": true }'>
       <div class="carousel-cell testimonial">
-        <p>"I love the quality of the products! Fast delivery and amazing customer service."</p>
-        <h4>- Alex Johnson</h4>
+        <p>"Great quality and fast delivery!"</p>
+        <h4>- John Carter</h4>
       </div>
       <div class="carousel-cell testimonial">
-        <p>"Great selection and excellent prices. The website is easy to use and everything arrived on time!"</p>
-        <h4>- Maria Lopez</h4>
+        <p>"I love their menswear collection. Everything fits perfectly."</p>
+        <h4>- Mark Benson</h4>
       </div>
       <div class="carousel-cell testimonial">
-        <p>"Excellent experience! The gear I bought has lasted for months and still looks brand new."</p>
-        <h4>- Daniel Smith</h4>
+        <p>"Best gear for my workouts. Highly recommend!"</p>
+        <h4>- Liam Smith</h4>
       </div>
     </div>
   </section>
