--- a/women.html
+++ b/women.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ProGear Hub</title>
+  <title>Women | ProGear Hub</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 </head>
@@ -51,23 +51,31 @@
 
   <!-- WOMEN PRODUCTS -->
   <section class="featured">
-    <h2>Featured Products</h2>
+    <h2>Women Products</h2>
     <div class="product-grid">
       <div class="product">
-        <img src="images/bola.jpg" alt="Product 1">
-        <button class="product-btn">Equipments</button>
+        <img src="images/active wear.jpg" alt="Women's Activewear Top">
+        <p>Activewear Top</p>
+        <p class="price">From $20</p>
+        <button class="product-btn">Add to Cart</button>
       </div>
       <div class="product">
-        <img src="images/short.jpg" alt="Product 2">
-        <button class="product-btn">Clothes</button>
+        <img src="images/Running shoes.jpg" alt="Women's Running Shoes">
+        <p>Running Shoes</p>
+        <p class="price">From $99</p>
+        <button class="product-btn">Add to Cart</button>
       </div>
       <div class="product">
-        <img src="images/Brand.jpg" alt="Product 3">
-        <button class="product-btn">Accessories</button>
+        <img src="images/W sports jacket.jpg" alt="Women's Sports Jacket">
+        <p>Sports Jacket</p>
+        <p class="price">From $199</p>
+        <button class="product-btn">Add to Cart</button>
       </div>
       <div class="product">
-        <img src="images/NSP-0036-118_zoom3.png" alt="Product 4">
-        <button class="product-btn">Sales</button>
+        <img src="images/w training set.jpg" alt="Women's Training Set">
+        <p>Training Set</p>
+        <p class="price">From $259</p>
+        <button class="product-btn">Add to Cart</button>
       </div>
     </div>
   </section>
