--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,6 @@
     </div>
   </header>
 
-  <!-- FRASE ABAIXO DO HEADER -->
   <div class="hero-message">
     Questions, ideas, or feedback? - We’re here to listen.
   </div>
@@ -44,7 +43,7 @@
                 <h1>Contact Us</h1>
 
                 <div class="form-group">
-                    <label for="name">Name</label>
+                    <label for="name">Full Name</label>
                     <input required id="name" name="name" type="text" placeholder="Caleb Johnson">
                     <span class="error-message">Please enter your name</span>
                 </div>
