--- a/kids.html
+++ b/kids.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Men | ProGear Hub</title>
+  <title>Kids | ProGear Hub</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 </head>
@@ -55,7 +55,7 @@
     <div class="product-grid">
       <div class="product">
         <img src="images/K clothes.jpg" alt="Kid's T-Shirt">
-        <p>Clothingt</p>
+        <p>Clothing</p>
         <p class="price">From $49</p>
         <button class="product-btn">Add to Cart</button>
       </div>
