--- a/kids.html
+++ b/kids.html
@@ -46,7 +46,7 @@
       <div class="carousel-cell"><img src="images/carousel1.jpg" alt="Banner 2"></div>
       <div class="carousel-cell"><img src="images/carousel2.jpg" alt="Banner 3"></div>
     </div>
-    <button class="shop-now">Shop Now</button>
+    <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
   </section>
 
   <!-- MEN PRODUCTS -->
@@ -57,25 +57,29 @@
         <img src="images/K clothes.jpg" alt="Kid's T-Shirt">
         <p>Clothing</p>
         <p class="price">From $49</p>
-        <button class="product-btn">Add to Cart</button>
+       <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
+
       </div>
       <div class="product">
         <img src="images/K foot.jpg" alt="Kid's Sneakers">
         <p>Footwear</p>
         <p class="price">From $99</p>
-        <button class="product-btn">Add to Cart</button>
+        <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
+
       </div>
       <div class="product">
         <img src="images/K bag.jpg" alt="Kid's Accessories">
         <p>Accessories</p>
         <p class="price">From $199</p>
-        <button class="product-btn">Add to Cart</button>
+       <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
+
       </div>
       <div class="product">
         <img src="images/K equipm.jpg" alt="Kid's Play Equipments">
         <p>Play Equipments</p>
         <p class="price">From $259</p>
-        <button class="product-btn">Add to Cart</button>
+       <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
+
       </div>
     </div>
   </section>
