--- a/women.html
+++ b/women.html
@@ -45,7 +45,7 @@
       <div class="carousel-cell"><img src="images/carousel1.jpg" alt="Banner 2"></div>
       <div class="carousel-cell"><img src="images/carousel2.jpg" alt="Banner 3"></div>
     </div>
-    <button class="shop-now">Shop Now</button>
+    <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
   </section>
 
   <!-- WOMEN PRODUCTS -->
@@ -56,25 +56,29 @@
         <img src="images/active wear.jpg" alt="Women's Activewear Top">
         <p>Activewear Top</p>
         <p class="price">From $20</p>
-        <button class="product-btn">Add to Cart</button>
+        <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
+
       </div>
       <div class="product">
         <img src="images/Running shoes.jpg" alt="Women's Running Shoes">
         <p>Running Shoes</p>
         <p class="price">From $99</p>
-        <button class="product-btn">Add to Cart</button>
+       <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
+
       </div>
       <div class="product">
         <img src="images/W sports jacket.jpg" alt="Women's Sports Jacket">
         <p>Sports Jacket</p>
         <p class="price">From $199</p>
-        <button class="product-btn">Add to Cart</button>
+       <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
+
       </div>
       <div class="product">
         <img src="images/w training set.jpg" alt="Women's Training Set">
         <p>Training Set</p>
         <p class="price">From $259</p>
-        <button class="product-btn">Add to Cart</button>
+       <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
+
       </div>
     </div>
   </section>
