--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
     <main class="contact-page">
     <div class="contact-card">
         <div class="card-content">
-            <form id="contact" class="contact-form">
+           <form id="contact" class="contact-form" action="contact_process.php" method="POST">
                 <h1>Contact Us</h1>
 
                 <div class="form-group">
