--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="carousel-cell"><img src="images/carousel1.jpg" alt="Banner 2"></div>
       <div class="carousel-cell"><img src="images/carousel2.jpg" alt="Banner 3"></div>
     </div>
-    <button class="shop-now">Shop Now</button>
+    <button class="shop-now" onclick="window.location.href='order.html'">Order Now</button>
   </section>
 
   <!-- WOMEN PRODUCTS -->
@@ -55,19 +55,19 @@
     <div class="product-grid">
       <div class="product">
         <img src="images/bola.jpg" alt="Product 1">
-        <button class="product-btn">Equipments</button>
+         <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
       </div>
       <div class="product">
         <img src="images/short.jpg" alt="Product 2">
-        <button class="product-btn">Clothes</button>
+         <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
       </div>
       <div class="product">
         <img src="images/Brand.jpg" alt="Product 3">
-        <button class="product-btn">Accessories</button>
+        <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
       </div>
       <div class="product">
         <img src="images/NSP-0036-118_zoom3.png" alt="Product 4">
-        <button class="product-btn">Sales</button>
+         <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
       </div>
     </div>
   </section>
