--- a/kids.html
+++ b/kids.html
@@ -33,12 +33,13 @@
   <section class="featured">
     <h2>Kids Products</h2>
     <div class="product-grid">
-      <div class="product">
-        <img src="images/K clothes.jpg" alt="Kid's T-Shirt">
-        <p>Clothing</p>
-        <p class="price">From $49</p>
-        <button onclick="window.location.href='order.html?product=Kid%27s+T-Shirt&price=49'">Order Now</button>
-      </div>
+    <div class="product">
+  <img src="images/K clothes.jpg" alt="Kid's T-Shirt">
+  <p>Clothing</p>
+  <p class="price">From $49</p>
+  <!-- botão só redireciona -->
+  <button onclick="window.location.href='order.html?product=Kid%27s+T-Shirt&price=49'">Order Now</button>
+</div>
       <div class="product">
         <img src="images/K foot.jpg" alt="Kid's Sneakers">
         <p>Footwear</p>
