--- a/kids.html
+++ b/kids.html
@@ -37,26 +37,27 @@
   <img src="images/K clothes.jpg" alt="Kid's T-Shirt">
   <p>Clothing</p>
   <p class="price">From $49</p>
-  <!-- botão só redireciona -->
-  <button onclick="window.location.href='order.html?product=Kid%27s+T-Shirt&price=49'">Order Now</button>
+
+
+<button class="product-btn" onclick="window.location.href='order.php?product=Clothing'">Order Now</button>
 </div>
       <div class="product">
         <img src="images/K foot.jpg" alt="Kid's Sneakers">
         <p>Footwear</p>
         <p class="price">From $99</p>
-        <button onclick="window.location.href='order.html?product=Kid%27s+Sneakers&price=99'">Order Now</button>
+        <button class="product-btn" onclick="window.location.href='order.php?product=Footwear'">Order Now</button>
       </div>
       <div class="product">
         <img src="images/K bag.jpg" alt="Kid's Accessories">
         <p>Accessories</p>
         <p class="price">From $199</p>
-        <button onclick="window.location.href='order.html?product=Kid%27s+Accessories&price=199'">Order Now</button>
+        <button class="product-btn" onclick="window.location.href='order.php?product=Accessories'">Order Now</button>
       </div>
       <div class="product">
         <img src="images/K equipm.jpg" alt="Kid's Play Equipments">
         <p>Play Equipments</p>
         <p class="price">From $259</p>
-        <button onclick="window.location.href='order.html?product=Kid%27s+Play+Equipments&price=259'">Order Now</button>
+        <button class="product-btn" onclick="window.location.href='order.php?product=Play Equipments'">Order Now</button>
       </div>
     </div>
   </section>
