--- a/men.html
+++ b/men.html
@@ -33,7 +33,7 @@
     </div>
   </header>
 
-  <!-- FRASE ABAIXO DO HEADER -->
+
   <div class="hero-message">
     Unleash your potential. Every move starts with the right gear.
   </div>
@@ -46,7 +46,7 @@
       <div class="carousel-cell"><img src="images/carousel1.jpg" alt="Banner 2"></div>
       <div class="carousel-cell"><img src="images/carousel2.jpg" alt="Banner 3"></div>
     </div>
-    <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
+    <button class="product-btn" onclick="window.location.href='order.php'">Order Now</button>
   </section>
 
   <!-- MEN PRODUCTS -->
@@ -57,28 +57,32 @@
         <img src="images/M tshirt.jpg" alt="Men's T-Shirt">
         <p>T-Shirt</p>
         <p class="price">From $30</p>
-       <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
+       <button class="product-btn" onclick="window.location.href='order.php?product=T-Shirt'">Order Now</button>
+
 
       </div>
       <div class="product">
         <img src="images/M snearker.jpg" alt="Men's Sneakers">
         <p>Sneakers</p>
         <p class="price">From $99</p>
-        <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
+        <button class="product-btn" onclick="window.location.href='order.php?product=Sneakers'">Order Now</button>
+
 
       </div>
       <div class="product">
         <img src="images/M hoodie.jpg" alt="Men's Hoodie">
         <p>Hoodie</p>
         <p class="price">From $199</p>
-        <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
+        <button class="product-btn" onclick="window.location.href='order.php?product=Hoodie'">Order Now</button>
+
 
       </div>
       <div class="product">
         <img src="images/M jacket.jpg" alt="Men's Sports Jacket">
         <p>Sports Jacket</p>
         <p class="price">From $299</p>
-       <button class="product-btn" onclick="window.location.href='order.html'">Order Now</button>
+     <button class="product-btn" onclick="window.location.href='order.php?product=Sports Jacket'">Order Now</button>
+
 
       </div>
     </div>
